Fix localhost link

--- a/dev/release-notebooks/en/3.3-release-notebook.md
+++ b/dev/release-notebooks/en/3.3-release-notebook.md
@@ -122,7 +122,7 @@ Submission files have been refactored to reduce file duplication and simplify ho
 
 - A [File](/dev/documentation/en/utilities-files) service class is used to read and write files.
 - A Submission File service class replaces the `SubmissionFileManager`.
-- [Endpoints](http://localhost:4000/dev/api/ojs/3.3#tag/Submissions-Files) were added to the REST API to read and write submission files.
+- [Endpoints](/dev/api/ojs/3.3#tag/Submissions-Files) were added to the REST API to read and write submission files.
 - The `SubmissionArtworkFile` and `SupplementaryFile` classes and their associated DAO delegates were removed. All submission files use the `SubmissionFile` class.
 
 Read the full documentation on [Submission Files](/dev/documentation/en/submission-files).
